[package]
name = "mdedit"
version = "1.0.0"
edition = "2021"
description = "markdown editor with ratatui and rat-salsa"
license = "MIT/Apache-2.0"
repository = "https://github.com/thscharler/mdedit"
authors = ["thscharler <thscharler@gmail.com>"]
readme = "readme.md"
keywords = ["ratatui", "input", "event-loop"]
categories = ["text-editors"]
exclude = [".idea/*", ".gitignore", "mdedit.gif"]

[features]
default = []
wgpu = ["dep:rat-salsa-wgpu"]
crossterm = ["dep:rat-salsa"]

[dependencies]
crossterm = "0.28"
ratatui = "0.29"
cli-clipboard = "0.4"
anyhow = "1.0"
log = "0.4"
rust-ini = "0.21"
fern = "0.7"
dirs = "6.0"
glob = "0.3"
ignore = "0.4"
pulldown-cmark = "0.12"
toml = "0.8"
crossbeam = "0.8"
sys-locale = "0.3"
try_as = "0.1"

rat-salsa = { version = "3.0", path = "../rat-salsa/rat-salsa", features = ["dialog_widgets"], optional = true }
rat-salsa-wgpu = { version = "0.1", path = "../rat-salsa-wgpu", features = ["dialog_widgets"], optional = true }
rat-dialog = { version = "1.0", path = "../rat-salsa/rat-dialog" }
rat-widget = { version = "2.10", path = "../rat-salsa/rat-widget", features = ["user_directories"] }
rat-theme4 = { version = "4.3", path = "../rat-salsa/rat-theme4" }
rat-markdown = { version = "0.6", path = "../rat-salsa/rat-markdown" }

[[bin]]
name = "mdedit-wgpu"
path = "src/main.rs"
required-features = ["wgpu"]

[[bin]]
name = "mdedit"
path = "src/main.rs"
required-features = ["crossterm"]