[package]
name = "mdedit"
version = "2.0.1"
edition = "2021"
description = "markdown editor with ratatui and rat-salsa"
license = "MIT/Apache-2.0"
repository = "https://github.com/thscharler/mdedit"
authors = ["thscharler <thscharler@gmail.com>"]
readme = "readme.md"
keywords = ["ratatui", "input", "event-loop"]
categories = ["text-editors"]
exclude = [".idea/*", ".gitignore", "mdedit.gif"]

[features]
default = ["term"]
wgpu = []
term = ["dep:rat-salsa"]

[dependencies]
cli-clipboard = "0.4"
anyhow = "1.0"
log = "0.4"
rust-ini = "0.21"
fern = "0.7"
dirs = "6.0"
glob = "0.3"
ignore = "0.4"
pulldown-cmark = "0.13"
toml = "0.8"
crossbeam = "0.8"
sys-locale = "0.3"
try_as = "0.1"

ratatui = { version = "0.30", features = ["crossterm"] }

rat-salsa = { version = "4.0", path = "../rat-salsa/rat-salsa", features = ["dialog_widgets"], optional = true }
# waiting ...
#rat-salsa-wgpu = { version = "0.1", path = "../rat-salsa-wgpu", features = ["dialog_widgets"], optional = true }
rat-dialog = { version = "2.0", path = "../rat-salsa/rat-dialog" }
rat-widget = { version = "3.0", path = "../rat-salsa/rat-widget", features = ["user_directories"] }
rat-theme4 = { version = "4", path = "../rat-salsa/rat-theme4" }
rat-markdown = { version = "0.7", path = "../rat-salsa/rat-markdown" }

[[bin]]
name = "mdedit-wgpu"
path = "src/main.rs"
required-features = ["wgpu"]

[[bin]]
name = "mdedit"
path = "src/main.rs"
required-features = ["term"]